MMA-8223 Fiks ymse IntelliJ-forslag